--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">moengage</string>
+    <string name="sort_descending">Old Articles First</string>
+    <string name="sort_ascending">New Articles First</string>
+    <string name="sort_button">Sort Button</string>
 </resources>
